--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -1,83 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.InicioFragment"
-    android:background="@color/back"
-    android:fitsSystemWindows="true">
+    android:background="@color/bg_light_green"
+    android:fitsSystemWindows="true"
+    android:paddingTop="5dp"
+    tools:context=".fragments.InicioFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingBottom="80dp"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:paddingBottom="80dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingVertical="15dp"
-            android:paddingHorizontal="30dp">
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="15dp">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="AgroHelper"
+                android:textColor="@color/text_dark_green"
                 android:textSize="30dp"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:textColor="@color/gray_suave"
-                android:textSize="16dp"
-                android:text="Diagnositco inteligente mediante evaluacion"/>
+                android:text="Diagnositco inteligente mediante evaluacion"
+                android:textColor="@color/text_soft_green"
+                android:textSize="16dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:clipToPadding="false"
+                    android:paddingHorizontal="12dp"
+                    android:overScrollMode="never"
+                    android:scrollbars="none"/>
+
+
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="260dp"
                     android:src="@drawable/image_plant"
-                    />
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/image_rounded"
+                    android:layout_marginBottom="0dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="30dp"
                     android:background="@drawable/buttom_border_rectangle"
                     android:orientation="vertical"
+                    android:paddingHorizontal="30dp"
                     android:paddingVertical="20dp">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textSize="30dp"
                         android:text="Evalúa tu planta"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"/>
+                        android:textColor="@color/text_dark_green"
+                        android:textSize="30dp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="15dp"
                         android:gravity="center"
-                        android:textSize="18dp"
-                        android:textColor="@color/gray_suave"
-                        android:layout_marginVertical="15dp"
-                        android:text="Responde unas preguntas sobre tu planta y obtén un diagnóstico personalizado con recomendaciones de cuidado"/>
+                        android:text="Responde unas preguntas sobre tu planta y obtén un diagnóstico personalizado con recomendaciones de cuidado"
+                        android:textColor="@color/text_soft_green"
+                        android:textSize="18dp" />
 
-                    <com.google.android.material.button.MaterialButton
+                    <include
+                        layout="@layout/custom_animated_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:backgroundTint="@color/green"
-                        android:textAllCaps="false"
-                        android:text="Iniciar Evaluación"/>
+                        />
+
+
                 </LinearLayout>
             </LinearLayout>
 
@@ -85,69 +106,76 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginVertical="20dp">
+
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_preview_shape"
                     android:gravity="center"
-                    android:background="@drawable/btn_preview_shape">
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="95%"
+                        android:textColor="@color/text_dark_green"
                         android:textSize="20dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Precisión"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/text_soft_green" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
                     android:layout_marginHorizontal="10dp"
+                    android:layout_weight="1"
                     android:background="@drawable/btn_preview_shape"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="100+"
+                        android:textColor="@color/text_dark_green"
                         android:textSize="20dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Problemas"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/text_soft_green" />
                 </LinearLayout>
 
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
+                    android:layout_weight="1"
                     android:background="@drawable/btn_preview_shape"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1"
+                        android:textColor="@color/text_dark_green"
                         android:textSize="20dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Usuario"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/text_soft_green" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -156,62 +184,69 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="¿Por qué elegir AgroHelper?"
+                    android:textColor="@color/text_dark_green"
                     android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"/>
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_radius_15dp"
                 android:layout_marginVertical="10dp"
+                android:background="@drawable/border_radius_15dp"
                 android:padding="20dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
+                        android:text="Evaluación completa"
+                        android:textColor="@color/text_dark_green"
                         android:textSize="20dp"
-                        android:text="Evaluación completa"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:text="Obtén consejos específicos basados en las condiciones únicas de tu planta"/>
+                        android:text="Obtén consejos específicos basados en las condiciones únicas de tu planta"
+                        android:textColor="@color/text_soft_green" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_radius_15dp"
                 android:layout_marginVertical="10dp"
+                android:background="@drawable/border_radius_15dp"
                 android:padding="20dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
+                        android:text="Recomendaciones Personalizadas"
+                        android:textColor="@color/text_dark_green"
                         android:textSize="20dp"
-                        android:text="Recomendaciones Personalizadas"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:text="Sistema de preguntas detallado que analiza todos los aspectos del cuidado de tu planta"/>
+                        android:text="Sistema de preguntas detallado que analiza todos los aspectos del cuidado de tu planta"
+                        android:textColor="@color/text_soft_green" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -223,22 +258,25 @@
                 android:background="@drawable/border_radius_15dp"
 
                 android:padding="20dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
+                        android:text="Fácil de Usar"
+                        android:textColor="@color/text_dark_green"
                         android:textSize="20dp"
-                        android:text="Fácil de Usar"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:text="Interfaz intuitiva que te guía paso a paso en el proceso de evaluación"/>
+                        android:text="Interfaz intuitiva que te guía paso a paso en el proceso de evaluación"
+                        android:textColor="@color/text_soft_green" />
                 </LinearLayout>
             </LinearLayout>
 
