--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,24 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="gray_suave">#9E9E9E</color>
     <color name="gray_dark">#404040</color>
     <color name="black_2">#0e0f0f</color>
-    <color name="back">#171819</color>
-    <color name="green">#387f4d</color>
     <color name="green_ligth">#66BB6A</color>
+    <color name="agr_green">#6BA368</color>
+    <color name="agr_light">#EDF5E1</color>
+    <color name="agr_dark">#40513B</color>
+    <color name="agr_brown">#A0522D</color>
+    <color name="agr_highlight">#A7D397</color>
+    <color name="green">#6BA368</color>
+    <color name="green_dark">#40513B</color>
+    <color name="brown_soil">#A0522D</color>
+    <color name="gray_suave">#AFAFAF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="back">#F0F8F0</color>
+    <color name="bg_light_green">#E8F5E9</color>
+    <color name="text_dark_green">#1B5E20</color>
+    <color name="text_soft_green">#4E944F</color>
+    <color name="card_background">#FFFFFF</color>
+
+
 </resources>
