--- a/app/src/main/res/drawable/buttom_border_rectangle.xml
+++ b/app/src/main/res/drawable/buttom_border_rectangle.xml
@@ -2,5 +2,5 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:bottomLeftRadius="16dp"
         android:bottomRightRadius="16dp"/>
-    <solid android:color="@color/black_2"/>
+    <solid android:color="@color/white"/>
 </shape>
