--- a/app/src/main/res/drawable/et_background.xml
+++ b/app/src/main/res/drawable/et_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#524E944F" />
-    <stroke android:width="2dp" android:color="@color/text_dark_green" />
+    <solid android:color="#70E8F5E9" />
+    <stroke android:width="1dp" android:color="#4E944F" />
     <corners android:radius="12dp" />
 </shape>
