--- a/app/src/main/res/drawable/opcion_normal_shape.xml
+++ b/app/src/main/res/drawable/opcion_normal_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#111118" />
-    <stroke android:width="1dp" android:color="#333340" />
+    <solid android:color="@color/white" />
+    <stroke android:width="2dp" android:color="@color/text_soft_green" />
     <corners android:radius="12dp" />
 </shape>
