--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,19 +3,18 @@
 
     <item
         android:id="@+id/inicio"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_home_black_24dp"
         android:title="Inicio" />
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-
-        android:title="@string/title_home" />
+        android:id="@+id/consultafast"
+        android:icon="@drawable/ic_consultafast"
+        android:title="Consulta Rápida" />
 
 
     <item
         android:id="@+id/evaluacion"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_evaluacion"
         android:title="Evaluacion" />
 
 
