--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,22 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/inicio">
 
     <fragment
         android:id="@+id/inicio"
         android:name="com.example.prueba_01.fragments.InicioFragment"
-        tools:layout="@layout/fragment_inicio" />
-
-    <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.prueba_01.ui.home.HomeFragment"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_inicio" >
+        <action
+            android:id="@+id/action_inicio_to_evaluacion"
+            app:destination="@id/evaluacion" />
+    </fragment>
 
     <fragment
         android:id="@+id/evaluacion"
         android:name="com.example.prueba_01.fragments.EvaluacionFragment"
         tools:layout="@layout/fragment_evaluacion" />
+    <fragment
+        android:id="@+id/consultafast"
+        android:name="com.example.prueba_01.fragments.ConsultafastFragment"
+        android:label="fragment_consultafast"
+        tools:layout="@layout/fragment_consultafast" />
 
 
 </navigation>
