--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,18 +1,36 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Prueba_01" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <style name="Theme.AgroHelper" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryVariant">@color/green_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
 
+        <item name="colorSecondary">@color/brown_soil</item>
+        <item name="colorOnSecondary">@color/white</item>
 
+        <item name="android:windowBackground">@color/green_dark</item>
+        <item name="android:statusBarColor">@color/green_dark</item>
+        <item name="android:navigationBarColor">@color/green_dark</item>
+
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+
+        <item name="materialButtonStyle">@style/Widget.AgroHelper.Button</item>
+        <item name="toolbarStyle">@style/Widget.AgroHelper.Toolbar</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
+
+    <style name="Widget.AgroHelper.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/green</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+    </style>
+
+    <style name="Widget.AgroHelper.Toolbar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="backgroundTint">@color/green_dark</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="subtitleTextColor">@color/gray_suave</item>
+    </style>
+
+
 </resources>
