--- a/app/src/main/res/drawable/opcion_seleccionada_shape.xml
+++ b/app/src/main/res/drawable/opcion_seleccionada_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#0f1f1a" />
-    <stroke android:width="1dp" android:color="#00FF99" />
+    <solid android:color="#524E944F" />
+    <stroke android:width="2dp" android:color="@color/text_dark_green" />
     <corners android:radius="12dp" />
 </shape>
