--- a/app/src/main/res/layout/fragment_consultafast.xml
+++ b/app/src/main/res/layout/fragment_consultafast.xml
@@ -148,7 +148,14 @@
                         android:id="@+id/layoutRespuestas"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical" />
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_resultado"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="16sp"
+                            android:textColor="@color/text_dark_green"/>
+                    </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
