--- a/app/src/main/res/layout/fragment_evaluacion.xml
+++ b/app/src/main/res/layout/fragment_evaluacion.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:id="@+id/evaluacion"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,6 +26,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/titulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
@@ -59,14 +62,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/pregunta"
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="¿Blas ya estás usando github?"
-                    android:textColor="@color/text_dark_green"
-                    android:textSize="18dp" />
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp">
+                    <TextView
+                        android:id="@+id/pregunta"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="¿Blas ya estás usando github?"
+                        android:textColor="@color/text_dark_green"
+                        android:textSize="18dp" />
+                </ScrollView>
             </LinearLayout>
 
             <LinearLayout
@@ -115,6 +122,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -158,6 +166,41 @@
                     app:tint="@color/white" />
             </LinearLayout>
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/buttons2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="gone">
+
+
+            <LinearLayout
+                android:id="@+id/btn_nueva_evaluacion"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/btn_next_shape"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="6dp"
+                    android:text="Nueva evaluacion"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:src="@drawable/ic_next"
+                    app:tint="@color/white" />
+            </LinearLayout>
+        </LinearLayout>
+
 
     </LinearLayout>
 </FrameLayout>
