--- a/app/src/main/res/layout/waiting_dialog.xml
+++ b/app/src/main/res/layout/waiting_dialog.xml
@@ -15,6 +15,7 @@
             android:layout_height="200dp"
             android:src="@drawable/clock_img2"/>
         <TextView
+            android:id="@+id/titulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
